// Vitest Snapshot v1

exports[`sml usercase test suites > only actor 1`] = `
"@startuml
left to right direction

actor :first actor: as user1
actor :another actor: as user2
actor :Last actor: as user3

@enduml"
`;

exports[`sml usercase test suites > test actor awesome style 1`] = `
"@startuml
skinparam actorStyle awesome
left to right direction

actor :User: as a1

usecase (Learn JavaScript) as u1

a1 --> u1
@enduml"
`;

exports[`sml usercase test suites > test actor style 1`] = `
"@startuml
left to right direction

actor :user: as u1

usecase (Write Blog) as c1

u1 --> c1
@enduml"
`;

exports[`sml usercase test suites > test note on simple actor or usecase 1`] = `
"@startuml
left to right direction

actor :User: as a1

usecase (Coding) as u1

note right of (a1)
  a student user
end note
note right of (u1)
  Coding Rust
end note

@enduml"
`;

exports[`sml usercase test suites > test only usercases 1`] = `
"@startuml
left to right direction

usecase (blog) as u1
usecase (music) as u2
usecase (play) as u3

@enduml"
`;

exports[`sml usercase test suites > test packages 1`] = `
"@startuml
left to right direction

actor :guest: as g

rectangle Restaurant {
  usecase \\"Eat Food\\" as uc1
  usecase \\"Pay for food\\" as uc2
}
rectangle Professional {
actor :Chef: as a
}

g --> uc1
g --> uc2
g --> uc3
a --> uc1
@enduml"
`;

exports[`sml usercase test suites > test rect 1`] = `
"@startuml
left to right direction

actor :Food Critic: as fc

rectangle Restaurant {
  usecase \\"Eat Food\\" as uc1
  usecase \\"Pay for food\\" as uc2
  usecase \\"Drink\\" as uc3
}

fc --> uc1
fc --> uc2
fc --> uc3
@enduml"
`;
